--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   },
   "files": [
     "dist/*"
-  ]
+  ],
+  "devDependencies": {
+    "bili": "^5.0.5",
+    "rollup-plugin-vue": "^6.0.0",
+    "vue-template-compiler": "^2.6.14"
+  }
 }
