--- a/package.json
+++ b/package.json
@@ -1,21 +1,42 @@
 {
-  "private": false,
-  "name": "vue-simple-galler-slider",
-  "version": "0.0.1",
-  "description": "A simple gallery slider for Vue",
-  "author": "Marshall Henhawke",
-  "license": "MIT",
-  "main": "./dist/index.js",
+  "name": "slider",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "vue serve SimpleGallerySlider.vue",
-    "build": "bili --name index --plugin vue --vue.css false"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
-  "files": [
-    "dist/*"
-  ],
+  "dependencies": {
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11"
+  },
   "devDependencies": {
-    "bili": "^5.0.5",
-    "rollup-plugin-vue": "^6.0.0",
-    "vue-template-compiler": "^2.6.14"
-  }
+    "@vue/cli-plugin-babel": "^4.5.0",
+    "@vue/cli-plugin-eslint": "^4.5.0",
+    "@vue/cli-service": "^4.5.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
