--- a/package.json
+++ b/package.json
@@ -1,12 +1,31 @@
 {
-  "name": "slider",
+  "name": "vue-simple-gallery-slider",
+  "description": "A dummy simple gallery slider for vue",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": {
+    "name": "Marshall Henhawke",
+    "email": "marsh.hawe@gmail.com"
+  },
+  "repository": "https://github.com/marshallhenhawke/vue-simple-gallery",
+  "bugs": "https://github.com/marshallhenhawke/vue-simple-gallery/issues",
+  "keywords": [
+    "vue",
+    "simple",
+    "gallery",
+    "slider"
+  ],
+  "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-library": "vue-cli-service build --target lib --name vue-simple-gallery-slider ./src/install.js",
     "lint": "vue-cli-service lint"
   },
+  "main": ".dist/vue-simple-gallery-slider.common.js",
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
