--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   ],
   "license": "MIT",
   "files": [
-    "dist/*"
+    "dist/*",
+    "public/*"
   ],
   "scripts": {
     "serve": "vue-cli-service serve",
