--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "main": "./dist/vue-simple-gallery-slider.common.js",
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "url-loader": "^2.3.0",
+    "vue": "^2.6.11",
+    "vue-svg-loader": "^0.16.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
